Changes for 1.1alpha10:

 - fixed issue with high agent's CPU usage for active checks (Alexei)
 - minor modifications of DB schema. Unnecessary indexes dropped. (Alexei)

Changes for 1.1alpha9:

 - changed copyright to SIA Zabbix (Alexei)
 - added basic support for log[*] (Alexei)
 - fixed processing of traps having character ':' (Alexei)
 - added logfiles.h and logfiles.c (Alexei)
 - group level start/stop monitoring (Alexei)
 - fixed read loop in active.c. (Alexei)
 - better readability of php code (Alexei)
 - support of file[*] (Alexei)
 - improved history.php (Alexei)
 - delete items from linked hosts when using checkboxes (Alexei)
 - changed definition of services.goodsla to double(5.2) (Alexei)
 - minor fix for users.php (Alexei)
 - fixed graph.php. Thanks to Michael Durket. (Alexei)
 - added SuSE 9.2 startup scripts. Thanks to Kiepe Andre. (Alexei)
 - changed MAX_STRING_LEN to MAX_BUF_LEN in memset() in active.c (Alexei)

Changes for 1.1alpha8:

 - better error reporting for GUI (Alexei)
 - daily/weekly/monthly/yearly SLA statistics (Alexei)
 - added parameter ServerPort to zabbix_agentd.conf (Alexei)
 - added parameter RefreshActiveChecks to zabbix_agentd.conf (Alexei)
 - better report3.php (Alexei)
 - better alarms.php (Alexei)
 - new item type: active check (Alexei)
 - new mandatory parameter for zabbix_agentd.conf - Hostname (Alexei)
 - started development of active agent checks (Alexei)
 - hard-linked templates works when deleting graph element (Alexei)
 - hard-linked templates works when adding graph element (Alexei)
 - support of memory[free] under OS/X (Alexei)
 - support of memory[total] under OS/X (Alexei)
 - fixed compilation of agent under OS/X (Alexei)
 - fixed memory[total] for HP-UX when >4GB of memory (Alexei)

Changes for 1.1alpha7:

 - fixed memory[free] for HP-UX when >4GB of memory (Alexei)
 - hard-linked templates works when deleting an action (Alexei)
 - hard-linked templates works when adding an action (Alexei)